--- a/MduiBlazor.Shared/Pages/Examples/Tooltip/TooltipPosition.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Tooltip/TooltipPosition.razor
@@ -1,22 +1,22 @@
 <MduiRow BreakpointXs="@Breakpoint.Xs.xs4">
     <MduiCol Class="mdui-text-center">
         <MduiTooltip Message="点击">
-            <MduiIconButton Icon="local_printshop" />
+            <MduiIconButton IconName="local_printshop" />
         </MduiTooltip>
     </MduiCol>
     <MduiCol Class="mdui-text-center">
         <MduiTooltip Message="点击" Position="@Position.Bottom">
-            <MduiIconButton Icon="local_printshop" />
+            <MduiIconButton IconName="local_printshop" />
         </MduiTooltip>
     </MduiCol>
     <MduiCol Class="mdui-text-center">
         <MduiTooltip Message="点击" Position="@Position.Left">
-            <MduiIconButton Icon="local_printshop" />
+            <MduiIconButton IconName="local_printshop" />
         </MduiTooltip>
     </MduiCol>
     <MduiCol Class="mdui-text-center">
         <MduiTooltip Message="点击" Position="@Position.Right">
-            <MduiIconButton Icon="local_printshop" />
+            <MduiIconButton IconName="local_printshop" />
         </MduiTooltip>
     </MduiCol>
 </MduiRow>
