--- a/MduiBlazor.Shared/Pages/PanelsPage.razor
+++ b/MduiBlazor.Shared/Pages/PanelsPage.razor
@@ -17,7 +17,7 @@
         <PageContentItem Title="面板嵌套" OnClick="@(_=>ScrollToElementById("cascade"))" />
         <PageContentItem Title="完整结构" OnClick="@(_=>ScrollToElementById("full"))" />
     </PageContentItem>
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -59,7 +59,7 @@
 
  <div>
      <h2 id="attr">
-         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
      </h2>
 
      <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
