--- a/MduiBlazor.Shared/Pages/SelectControlPage.razor
+++ b/MduiBlazor.Shared/Pages/SelectControlPage.razor
@@ -14,7 +14,7 @@
         <PageContentItem Title="复选框" OnClick="@(_=>ScrollToElementById("checkbox"))" />
         <PageContentItem Title="开关切换" OnClick="@(_=>ScrollToElementById("switch"))" />
     </PageContentItem>
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -38,7 +38,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
