--- a/MduiBlazor.Shared/Pages/DividerPage.razor
+++ b/MduiBlazor.Shared/Pages/DividerPage.razor
@@ -13,7 +13,7 @@
         <PageContentItem Title="等屏宽分隔线" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="内凹分隔线" OnClick="@(_=>ScrollToElementById("inset"))" />
     </PageContentItem>
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -37,7 +37,7 @@
 
  <div>
      <h2 id="attr">
-         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
      </h2>
 
      <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
