--- a/MduiBlazor.Shared/Pages/FabsPage.razor
+++ b/MduiBlazor.Shared/Pages/FabsPage.razor
@@ -14,7 +14,7 @@
         <PageContentItem Title="隐藏/显示动画" OnClick="@(_=>ScrollToElementById("hide"))" />
     </PageContentItem>
     <PageContentItem Title="弹出菜单" OnClick="@(_=>ScrollToElementById("fabmenu"))" />
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -47,15 +47,14 @@
 
  <div>
      <h2 id="attr">
-         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
      </h2>
 
      <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
         <MduiSimpleTable>
             <thead>
                 <th>组件</th>
-                <th>分类</th>
-                <th>名称</th>
+                <th>参数名称</th>
                 <th>类型/返回类型</th>
                 <th>说明</th>
             </thead>
@@ -64,9 +63,6 @@
                     <th rowspan="8">
                         <code>MduiFab</code>
                     </th>
-                    <td rowspan="8">
-                        <code>Parameter</code>
-                    </td>
                     <td>
                         <code>Color</code>
                     </td>
@@ -142,9 +138,6 @@
                     <th rowspan="6">
                         <code>MduiFabMenu</code>
                     </th>
-                    <td rowspan="6">
-                        <code>Parameter</code>
-                    </td>
                     <td>
                         <code>Color</code>
                     </td>
