--- a/MduiBlazor.Shared/Pages/ListPage.razor
+++ b/MduiBlazor.Shared/Pages/ListPage.razor
@@ -28,7 +28,7 @@
         <PageContentItem Title="文件列表" OnClick="@(_=>ScrollToElementById("filesList"))" />
         <PageContentItem Title="通讯录" OnClick="@(_=>ScrollToElementById("contactor"))" />
     </PageContentItem>
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -124,7 +124,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
