--- a/MduiBlazor.Shared/Pages/MediaPage.razor
+++ b/MduiBlazor.Shared/Pages/MediaPage.razor
@@ -17,7 +17,7 @@
         <PageContentItem Title="响应式嵌入式视频" OnClick="@(_=>ScrollToElementById("iframevideo"))" />
         <PageContentItem Title="响应式HTML5视频" OnClick="@(_=>ScrollToElementById("h5video"))" />
     </PageContentItem>
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -60,7 +60,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
