--- a/MduiBlazor.Shared/Pages/SelectPage.razor
+++ b/MduiBlazor.Shared/Pages/SelectPage.razor
@@ -13,7 +13,7 @@
         <PageContentItem Title="原生单选组件" OnClick="@(_=>ScrollToElementById("singleSelect"))" />
         <PageContentItem Title="原生多选组件" OnClick="@(_=>ScrollToElementById("multiSelect"))" />
     </PageContentItem>
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -34,7 +34,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
