--- a/MduiBlazor.Shared/Pages/SliderPage.razor
+++ b/MduiBlazor.Shared/Pages/SliderPage.razor
@@ -12,7 +12,7 @@
         <PageContentItem Title="普通滑块" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="间续滑块" OnClick="@(_=>ScrollToElementById("discrete"))" />
     </PageContentItem>
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -37,7 +37,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
