--- a/MduiBlazor.Shared/Pages/TextfieldPage.razor
+++ b/MduiBlazor.Shared/Pages/TextfieldPage.razor
@@ -21,7 +21,7 @@
         <PageContentItem Title="含图标" OnClick="@(_=>ScrollToElementById("icon"))" />
         <PageContentItem Title="可展开文本框" OnClick="@(_=>ScrollToElementById("expandable"))" />
     </PageContentItem>
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -67,7 +67,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
