--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -35,6 +35,7 @@
             <MduiNavMenuItem Href="slider">滑块</MduiNavMenuItem>
             <MduiNavMenuItem Href="progress">进度指示器</MduiNavMenuItem>
             <MduiNavMenuItem Href="list">列表</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tabs">Tab 选项卡</MduiNavMenuItem>
             <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
             <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
             <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
@@ -43,7 +44,6 @@
             <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
             <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
             <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
-            <MduiNavMenuItem Href="tabs">Tabs</MduiNavMenuItem>
             <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
