--- a/MduiBlazor.Shared/Pages/TooltipPage.razor
+++ b/MduiBlazor.Shared/Pages/TooltipPage.razor
@@ -13,7 +13,7 @@
         <PageContentItem Title="Tooltip" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="位置" OnClick="@(_=>ScrollToElementById("position"))" />
     </PageContentItem>
-    <PageContentItem Title="属性/方法/事件" OnClick="@(_=>ScrollToElementById("attr"))" />
+    <PageContentItem Title="组件参数" OnClick="@(_=>ScrollToElementById("attr"))" />
 </PageContent>
 
 <MduiDivider Class="mdui-m-y-5" />
@@ -34,26 +34,18 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">组件参数</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
         <MduiSimpleTable>
             <thead>
-                <th>组件</th>
-                <th>分类</th>
-                <th>名称</th>
+                <th>参数名称</th>
                 <th>类型/返回类型</th>
                 <th>说明</th>
             </thead>
             <tbody>
                 <tr>
-                    <th rowspan="2">
-                        <code>MduiTooltip</code>
-                    </th>
-                    <td rowspan="2">
-                        <code>Parameter</code>
-                    </td>
                     <td>
                         <code>Message</code>
                     </td>
