--- a/MduiBlazor.Shared/Pages/Examples/Buttons/ButtonGroup.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Buttons/ButtonGroup.razor
@@ -1,14 +1,14 @@
 <MduiButtonGroup>
     <MduiButton>
-        <MduiIcon Name="format_align_left" />
+        <MduiIcon Icon="format_align_left" />
     </MduiButton>
     <MduiButton Actived>
-        <MduiIcon Name="format_align_center" />
+        <MduiIcon Icon="format_align_center" />
     </MduiButton>
     <MduiButton>
-        <MduiIcon Name="format_align_right" />
+        <MduiIcon Icon="format_align_right" />
     </MduiButton>
     <MduiButton>
-        <MduiIcon Name="format_align_justify" />
+        <MduiIcon Icon="format_align_justify" />
     </MduiButton>
 </MduiButtonGroup>
