--- a/MduiBlazor.Shared/Pages/Examples/Buttons/DenseButton.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Buttons/DenseButton.razor
@@ -1,3 +1,3 @@
 <MduiButton Dense Color="@Colors.Theme.Accent" DisableRaised>Button</MduiButton>
 <MduiButton Dense Color="@Colors.Theme.Accent">Button</MduiButton>
-<MduiIconButton Dense Color="@Colors.Theme.Accent" IconName="add" />
+<MduiIconButton Dense Color="@Colors.Theme.Accent" Icon="add" />
