--- a/MduiBlazor.Shared/Pages/Examples/Buttons/IconButton.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Buttons/IconButton.razor
@@ -1,5 +1,5 @@
 <MduiIconButton>
-    <MduiIcon Name="add" />
+    <MduiIcon Icon="add" />
 </MduiIconButton>
-<MduiIconButton IconName="add" TextColor="@Colors.Theme.Accent" />
-<MduiIconButton IconName="add" Color="@Colors.Theme.Accent" />
+<MduiIconButton Icon="add" TextColor="@Colors.Theme.Accent" />
+<MduiIconButton Icon="add" Color="@Colors.Theme.Accent" />
