--- a/MduiBlazor.Shared/Pages/Examples/Fabs/MiniFab.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Fabs/MiniFab.razor
@@ -1,2 +1,2 @@
-<MduiFab Mini IconName="add" />
-<MduiFab Mini Color="@Colors.Theme.Accent" IconName="add" />
+<MduiFab Mini Icon="add" />
+<MduiFab Mini Color="@Colors.Theme.Accent" Icon="add" />
