--- a/MduiBlazor.Shared/Pages/Examples/Fabs/SimpleFab.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Fabs/SimpleFab.razor
@@ -1,2 +1,2 @@
-<MduiFab IconName="add" />
-<MduiFab Color="@Colors.Theme.Accent" IconName="add" />
+<MduiFab Icon="add" />
+<MduiFab Color="@Colors.Theme.Accent" Icon="add" />
