--- a/MduiBlazor.Shared/Pages/Examples/Icons/ButtonWithIcon.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Icons/ButtonWithIcon.razor
@@ -1,12 +1,12 @@
 <MduiButton Color="@Colors.Theme.Accent">
-  Share<MduiIcon Name="share" />
+  Share<MduiIcon Icon="share" />
 </MduiButton>
 <MduiButton Color="@Colors.Theme.Accent" DisableRaised>
-  <MduiIcon Name="share" />Share
+  <MduiIcon Icon="share" />Share
 </MduiButton>
 <MduiButton Color="@Colors.Yellow.Primary">
-  Share<MduiIcon Name="share" />
+  Share<MduiIcon Icon="share" />
 </MduiButton>
 <MduiButton Color="@Colors.Yellow.Primary" Disabled DisableRaised>
-  Share<MduiIcon Name="share" />
+  Share<MduiIcon Icon="share" />
 </MduiButton>
