--- a/MduiBlazor.Shared/Pages/Examples/Icons/MaterialIcons.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Icons/MaterialIcons.razor
@@ -1,3 +1,3 @@
-<MduiIcon Name="check_box" />
-<MduiIcon Color="@Colors.Red.Primary" Name="check_box" />
-<MduiIcon Color="@Colors.Theme.Primary" Name="check_box" />
+<MduiIcon Icon="check_box" />
+<MduiIcon Color="@Colors.Red.Primary" Icon="check_box" />
+<MduiIcon Color="@Colors.Theme.Primary" Icon="check_box" />
