--- a/MduiBlazor.Shared/Pages/Examples/Lists/AvatarWithIconList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/AvatarWithIconList.razor
@@ -2,21 +2,21 @@
     <MduiListItem>
         <MduiListAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
         <MduiListContent>Brendan Lim</MduiListContent>
-        <MduiIcon Name="chat_bubble" />
+        <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiListItem>
         <MduiListAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
         <MduiListContent>me, Scott, Jennifer</MduiListContent>
-        <MduiIcon Name="chat_bubble" />
+        <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiListItem>
         <MduiListAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
         <MduiListContent>Grace Ng</MduiListContent>
-        <MduiIcon Name="chat_bubble" />
+        <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiListItem>
         <MduiListAvatar ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/5e010867ef986d05d625.jpg" />
         <MduiListContent>Kerem Suer</MduiListContent>
-        <MduiIcon Name="chat_bubble" />
+        <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
 </MduiList>
