--- a/MduiBlazor.Shared/Pages/Examples/Lists/CascadeList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/CascadeList.razor
@@ -1,23 +1,23 @@
 <MduiList Accordion Style="max-width:480px">
-    <MduiListItem Title="Home" IconName="home" />
-    <MduiListItem Title="dashboard" IconName="dashboard" />
-    <MduiListCollapse Dense Title="Audience" IconName="people">
+    <MduiListItem Title="Home" Icon="home" />
+    <MduiListItem Title="dashboard" Icon="dashboard" />
+    <MduiListCollapse Dense Title="Audience" Icon="people">
         <MduiListItem>Overview</MduiListItem>
         <MduiListItem>Language</MduiListItem>
         <MduiListItem>Location</MduiListItem>
         <MduiListItem>New vs Returning</MduiListItem>
     </MduiListCollapse>
-    <MduiListCollapse Dense Title="Acquisition" IconName="device_hub">
+    <MduiListCollapse Dense Title="Acquisition" Icon="device_hub">
         <MduiListItem>Overview</MduiListItem>
         <MduiListItem>All Traffic</MduiListItem>
         <MduiListItem>Direct Traffic</MduiListItem>
         <MduiListItem>Search Overview</MduiListItem>
     </MduiListCollapse>
-    <MduiListCollapse Dense Title="Behavior" IconName="touch_app">
+    <MduiListCollapse Dense Title="Behavior" Icon="touch_app">
         <MduiListItem>Overview</MduiListItem>
         <MduiListItem>All Pages</MduiListItem>
         <MduiListItem>Landing Pages</MduiListItem>
         <MduiListItem>Exit Pages</MduiListItem>
     </MduiListCollapse>
-    <MduiListItem Title="Ecommerce" IconName="shopping_cart" />
+    <MduiListItem Title="Ecommerce" Icon="shopping_cart" />
 </MduiList>
