--- a/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList.razor
@@ -2,12 +2,12 @@
     <MduiListItem>
         <MduiCheckbox Value />
         <MduiListContent>Line item selected</MduiListContent>
-        <MduiIcon Name="move_to_inbox" />
+        <MduiIcon Icon="move_to_inbox" />
     </MduiListItem>
     <MduiListItem>
         <MduiCheckbox Value="@false" />
         <MduiListContent>Line item unselected</MduiListContent>
-        <MduiIcon Name="send" />
+        <MduiIcon Icon="send" />
     </MduiListItem>
     <MduiListItem>
         <MduiCheckbox Value />
