--- a/MduiBlazor.Shared/Pages/Examples/Lists/EmptyIconList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/EmptyIconList.razor
@@ -1,6 +1,6 @@
 <MduiList Style="max-width:480px;">
-    <MduiListItem Title="InBox" IconName="move_to_inbox" />
-    <MduiListItem Title="Outbox" IconName="send" />
-    <MduiListItem Title="Trash" IconName="" />
-    <MduiListItem Title="Spam" IconName="" />
+    <MduiListItem Title="InBox" Icon="move_to_inbox" />
+    <MduiListItem Title="Outbox" Icon="send" />
+    <MduiListItem Title="Trash" Icon="" />
+    <MduiListItem Title="Spam" Icon="" />
 </MduiList>
