--- a/MduiBlazor.Shared/Pages/Examples/Lists/FilesList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/FilesList.razor
@@ -2,30 +2,30 @@
     <MduiSubheader Inset>Folders</MduiSubheader>
     <MduiListItem>
         <MduiListAvatar>
-            <MduiIcon Name="folder" />
+            <MduiIcon Icon="folder" />
         </MduiListAvatar>
         <MduiListContent Title="Photos">
             Jan 9, 2014
         </MduiListContent>
-        <MduiIcon Name="info" Color="@Colors.Grey.Primary4" />
+        <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiListItem>
         <MduiListAvatar>
-            <MduiIcon Name="folder" />
+            <MduiIcon Icon="folder" />
         </MduiListAvatar>
         <MduiListContent Title="Recipes">
             Jan 17, 2014
         </MduiListContent>
-        <MduiIcon Name="info" Color="@Colors.Grey.Primary4" />
+        <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiListItem>
         <MduiListAvatar>
-            <MduiIcon Name="folder" />
+            <MduiIcon Icon="folder" />
         </MduiListAvatar>
         <MduiListContent Title="Work">
             Jan 28, 2014
         </MduiListContent>
-        <MduiIcon Name="info" Color="@Colors.Grey.Primary4" />
+        <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiSubheader Inset>Files</MduiSubheader>
     <MduiListItem>
