--- a/MduiBlazor.Shared/Pages/Examples/Lists/IconAvatarList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/IconAvatarList.razor
@@ -1,19 +1,19 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
         <MduiListAvatar>
-            <MduiIcon Name="folder" />
+            <MduiIcon Icon="folder" />
         </MduiListAvatar>
         <MduiListContent>Photos</MduiListContent>
     </MduiListItem>
     <MduiListItem>
         <MduiListAvatar>
-            <MduiIcon Name="folder" />
+            <MduiIcon Icon="folder" />
         </MduiListAvatar>
         <MduiListContent>Recipes</MduiListContent>
     </MduiListItem>
     <MduiListItem>
         <MduiListAvatar>
-            <MduiIcon Name="assignment" />
+            <MduiIcon Icon="assignment" />
         </MduiListAvatar>
         <MduiListContent>Work</MduiListContent>
     </MduiListItem>
