--- a/MduiBlazor.Shared/Pages/Examples/Lists/SwitchList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/SwitchList.razor
@@ -1,13 +1,13 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiIcon Name="network_wifi" />
+        <MduiIcon Icon="network_wifi" />
         <MduiListContent>Wi-Fi</MduiListContent>
         <MduiCheckbox Switch Value="@true" />
     </MduiListItem>
     <MduiListItem>
-        <MduiIcon Name="bluetooth" />
+        <MduiIcon Icon="bluetooth" />
         <MduiListContent>Bluetooth</MduiListContent>
         <MduiCheckbox Switch />
     </MduiListItem>
-    <MduiListItem Title="Data usage" IconName="data_usage" />
+    <MduiListItem Title="Data usage" Icon="data_usage" />
 </MduiList>
