--- a/MduiBlazor.Shared/Pages/TabsPage.razor
+++ b/MduiBlazor.Shared/Pages/TabsPage.razor
@@ -41,6 +41,9 @@
     <MduiText id="fullwidth" Typo="@Typo.subheading"><b>100% 宽度</b></MduiText>
     <ExampleSection Component="@typeof(FullWidthTab)" />
 
+    <MduiText id="icon" Typo="@Typo.subheading"><b>含图标</b></MduiText>
+    <ExampleSection Component="@typeof(IconTab)" />
+
     <MduiText id="icon&text" Typo="@Typo.subheading"><b>含图标和文本</b></MduiText>
     <ExampleSection Component="@typeof(IconWithTextTab)" />
 
