--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -1,12 +1,12 @@
 ﻿<MduiNavMenu Accordion>
     <MduiNavMenuItem Title="开始使用" Href="" Match="NavLinkMatch.All">
         <IconContent>
-            <MduiIcon Name="near_me" Color="@Colors.Blue.Primary" />
+            <MduiIcon Icon="near_me" Color="@Colors.Blue.Primary" />
         </IconContent>
     </MduiNavMenuItem>
     <MduiNavMenuCollapse Title="样式和布局">
         <IconContent>
-            <MduiIcon Name="layers" Color="@Colors.DeepOrange.Primary" />
+            <MduiIcon Icon="layers" Color="@Colors.DeepOrange.Primary" />
         </IconContent>
         <ChildContent>
             <MduiNavMenuItem Href="colors">颜色</MduiNavMenuItem>
@@ -20,7 +20,7 @@
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="组件">
         <IconContent>
-            <MduiIcon Name="widgets" Color="@Colors.Green.Primary" />
+            <MduiIcon Icon="widgets" Color="@Colors.Green.Primary" />
         </IconContent>
         <ChildContent>
             <MduiNavMenuItem Href="bars">Bars</MduiNavMenuItem>
@@ -36,6 +36,7 @@
             <MduiNavMenuItem Href="progress">进度指示器</MduiNavMenuItem>
             <MduiNavMenuItem Href="list">列表</MduiNavMenuItem>
             <MduiNavMenuItem Href="tabs">Tab 选项卡</MduiNavMenuItem>
+            <MduiNavMenuItem Href="toolbar">工具栏</MduiNavMenuItem>
             <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
             <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
             <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
@@ -49,7 +50,7 @@
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="资源">
         <IconContent>
-            <MduiIcon Name="local_mall" Color="@Colors.Purple.Primary" />
+            <MduiIcon Icon="local_mall" Color="@Colors.Purple.Primary" />
         </IconContent>
         <ChildContent>
             <MduiNavMenuItem Href="material_icon">Material图标库</MduiNavMenuItem>
