--- a/MduiBlazor/Components/Button/MduiFabMenu.razor
+++ b/MduiBlazor/Components/Button/MduiFabMenu.razor
@@ -10,7 +10,7 @@
             }
             else
             {
-                <MduiIcon Name="@Icon" />
+                <MduiIcon Icon="@Icon" />
             }
         </div>
         <div class="mdui-fab-icon mdui-fab-opened">
@@ -20,7 +20,7 @@
             }
             else
             {
-                <MduiIcon Name="@_openedIcon" />
+                <MduiIcon Icon="@_openedIcon" />
             }
         </div>
     </button>
