--- a/MduiBlazor/Components/List/MduiListCollapse.razor
+++ b/MduiBlazor/Components/List/MduiListCollapse.razor
@@ -8,9 +8,9 @@
         {
             @IconContent
         }
-        @if (IconName is not null)
+        @if (Icon is not null)
         {
-            <MduiIcon Icon="@IconName" />
+            <MduiIcon Icon="@Icon" />
         }
         <div class="mdui-list-item-content">@Title</div>
         <i class="mdui-collapse-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
