--- a/MduiBlazor/Components/List/MduiListItem.razor
+++ b/MduiBlazor/Components/List/MduiListItem.razor
@@ -12,9 +12,9 @@
         {
             @IconContent
         }
-        else if (IconName is not null)
+        else if (Icon is not null)
         {
-            <MduiIcon Name="@IconName" />
+            <MduiIcon Icon="@Icon" />
         }
         <MduiListContent Title="@Title" />
     }
