--- a/MduiBlazor/Components/Panel/MduiPanelItem.razor
+++ b/MduiBlazor/Components/Panel/MduiPanelItem.razor
@@ -11,7 +11,7 @@
                 <div class="mdui-panel-item-summary">@item</div>
             }
         }
-        <MduiIcon Class="mdui-panel-item-arrow" Name="@ArrowIcon" />
+        <MduiIcon Class="mdui-panel-item-arrow" Icon="@ArrowIcon" />
     </div>
     <div class="mdui-panel-item-body">
         @ChildContent
