--- a/MduiBlazor/Components/Tab/MduiTab.razor
+++ b/MduiBlazor/Components/Tab/MduiTab.razor
@@ -11,7 +11,7 @@
             }
             else if (!string.IsNullOrWhiteSpace(item.Icon))
             {
-                <MduiIcon Name="@item.Icon" />
+                <MduiIcon Icon="@item.Icon" />
             }
             @if (!string.IsNullOrWhiteSpace(item.Title))
             {
