--- a/MduiBlazor.Shared/Pages/Examples/Icons/ThirdIcons.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Icons/ThirdIcons.razor
@@ -1,14 +1,14 @@
 <link rel="stylesheet" href="https://cdn.w3cbus.com/library/ionicons/2.0.1/css/ionicons.min.css" />
 
-<MduiIcon Custom Name="ion-plus-circled" />
- <MduiIcon Custom Color="@Colors.Red.Primary" Name="ion-plus-circled" />
- <MduiIcon Custom Color="@Colors.Theme.Primary" Name="ion-plus-circled" />
+<MduiIcon Custom Icon="ion-plus-circled" />
+ <MduiIcon Custom Color="@Colors.Red.Primary" Icon="ion-plus-circled" />
+ <MduiIcon Custom Color="@Colors.Theme.Primary" Icon="ion-plus-circled" />
  <MduiIconButton>
-     <MduiIcon Name="ion-plus-round" Custom />
+     <MduiIcon Icon="ion-plus-round" Custom />
  </MduiIconButton>
  <MduiButton Color="@Colors.Theme.Accent">
-     <MduiIcon Custom Name="ion-share" />Share
+     <MduiIcon Custom Icon="ion-share" />Share
  </MduiButton>
  <MduiFab Color="@Colors.Theme.Accent">
-    <MduiIcon Name="ion-plus-round" Custom />
+    <MduiIcon Icon="ion-plus-round" Custom />
  </MduiFab>
