--- a/MduiBlazor.Shared/Pages/Examples/Lists/ContactorList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/ContactorList.razor
@@ -1,27 +1,27 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
-        <MduiIcon Name="phone" Color="@Colors.Indigo.Primary" />
+        <MduiIcon Icon="phone" Color="@Colors.Indigo.Primary" />
         <MduiListContent Title="(650) 555-1234">
             Mobile
         </MduiListContent>
-        <MduiIcon Name="chat_bubble" />
+        <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiListItem>
-        <MduiIcon Name="" />
+        <MduiIcon Icon="" />
         <MduiListContent Title="(323) 555-6789">
             Work
         </MduiListContent>
-        <MduiIcon Name="chat_bubble" />
+        <MduiIcon Icon="chat_bubble" />
     </MduiListItem>
     <MduiDivider />
     <MduiListItem>
-        <MduiIcon Name="email" Color="@Colors.Indigo.Primary" />
+        <MduiIcon Icon="email" Color="@Colors.Indigo.Primary" />
         <MduiListContent Title="aliconnors@example.com">
             Personal
         </MduiListContent>
     </MduiListItem>
     <MduiListItem>
-        <MduiIcon Name="" />
+        <MduiIcon Icon="" />
         <MduiListContent Title="ali_connors@example.com">
             Work
         </MduiListContent>
