--- a/MduiBlazor.Shared/Pages/Examples/Lists/IconList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/IconList.razor
@@ -1,6 +1,6 @@
 <MduiList Style="max-width:480px;">
-    <MduiListItem Title="Inbox" IconName="move_to_inbox" />
-    <MduiListItem Title="Outbox" IconName="send" />
-    <MduiListItem Title="Trash" IconName="delete" />
-    <MduiListItem Title="Spam" IconName="error" />
+    <MduiListItem Title="Inbox" Icon="move_to_inbox" />
+    <MduiListItem Title="Outbox" Icon="send" />
+    <MduiListItem Title="Trash" Icon="delete" />
+    <MduiListItem Title="Spam" Icon="error" />
 </MduiList>
