--- a/MduiBlazor.Shared/Pages/Examples/Lists/RightIconList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/RightIconList.razor
@@ -1,18 +1,18 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
         <MduiListContent>Inbox</MduiListContent>
-        <MduiIcon Name="move_to_inbox" />
+        <MduiIcon Icon="move_to_inbox" />
     </MduiListItem>
     <MduiListItem>
         <MduiListContent>Outbox</MduiListContent>
-        <MduiIcon Name="send" />
+        <MduiIcon Icon="send" />
     </MduiListItem>
     <MduiListItem>
         <MduiListContent>Trash</MduiListContent>
-        <MduiIcon Name="delete" />
+        <MduiIcon Icon="delete" />
     </MduiListItem>
     <MduiListItem>
         <MduiListContent>Spam</MduiListContent>
-        <MduiIcon Name="error" />
+        <MduiIcon Icon="error" />
     </MduiListItem>
 </MduiList>
