--- a/MduiBlazor/Components/Icon/MduiIcon.razor
+++ b/MduiBlazor/Components/Icon/MduiIcon.razor
@@ -7,5 +7,5 @@
 }
 else
 {
-    <i class="@Classname" style="@Style" @attributes="@AdditionalAttributes">@Name</i>
+    <i class="@Classname" style="@Style" @attributes="@AdditionalAttributes">@Icon</i>
 }
