--- a/MduiBlazor/Components/Input/MduiField.razor
+++ b/MduiBlazor/Components/Input/MduiField.razor
@@ -4,7 +4,7 @@
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @if (Icon is not null)
     {
-        <MduiIcon Name="@Icon" />
+        <MduiIcon Icon="@Icon" />
     }
     @if (Label is not null)
     {
