--- a/MduiBlazor.Shared/Pages/Examples/Lists/FilesList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/FilesList.razor
@@ -30,20 +30,20 @@
     <MduiSubheader Inset>Files</MduiSubheader>
     <MduiListItem>
         <MduiListAvatar Class="mdui-color-blue mdui-text-color-white">
-            <MduiIcon Name="assignment" />
+            <MduiIcon Icon="assignment" />
         </MduiListAvatar>
         <MduiListContent Title="Photos">
             Jan 9, 2014
         </MduiListContent>
-        <MduiIcon Name="info" Color="@Colors.Grey.Primary4" />
+        <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
     <MduiListItem>
         <MduiListAvatar Class="mdui-color-yellow-600 mdui-text-color-white">
-            <MduiIcon Name="assignment" />
+            <MduiIcon Icon="assignment" />
         </MduiListAvatar>
         <MduiListContent Title="Kitchen remodel">
             Jan 10, 2014
         </MduiListContent>
-        <MduiIcon Name="info" Color="@Colors.Grey.Primary4" />
+        <MduiIcon Icon="info" Color="@Colors.Grey.Primary4" />
     </MduiListItem>
 </MduiList>
